src/snapshots/pactfmt__pretty__tests__defcap_multiline.snap
---
source: src/pretty.rs
expression: buffer
---
(defun TRANSFER:bool 
  
  (
    
    sender:string
    receiver:string
    amount:decimal
  )
  
  @managed amount TRANSFER-mgr

)
