src/snapshots/pactfmt__pretty__tests__defun.snap
---
source: src/pretty.rs
expression: buffer
---
(defun f ; wot
  ( x:object{schema}
    y:[integer]
  )
  
  (+
    x
    (write y 1.0))
  "Write succeeded")
