src/snapshots/pactfmt__pretty__tests__defun_multiline.snap
---
source: src/pretty.rs
expression: buffer
---
(defun f ; wot
  ( x:object{schema}
    y:[integer]
  )
  (+
    x
    (write y 1.0))
  [ "Write"
    (write y 1.0)
    "definitely"
    "succeeded"
  ])
