src/snapshots/pactfmt__pretty__tests__module_basic.snap
---
source: src/pretty.rs
expression: buffer
---
; This is a Pact module
(module 
  ; wot
  basic GOV 
  
  (defcap GOV () true)
  
  (defun add:integer (x:integer y:integer) 
    @doc "adds integers"
    (+ x y)
  )
)
